--- a/inheritance/looks.css
+++ b/inheritance/looks.css
@@ -1,6 +1,8 @@
 @font-face {
-  font-family: 'wremena';
-  src: url('font/regular.woff') format('woff');
+  font-family: 'merriweather';
+  src: url('font/Merriweather/Merriweather-Regular.ttf') format('ttf');
+  src: url('font/Merriweather/Merriweather-Italic.ttf') format('ttf');
+  src: url('font/Merriweather/Merriweather-Light.ttf') format('ttf');
   font-weight: normal;
   font-style: normal;
 }
@@ -8,7 +10,7 @@
 /* BROWSER SIZE 2634 x 1590 */
 html {
   box-sizing: border-box;
-  cursor: none;
+  /*cursor: none;*/
 }
 
 *, *:before, *:after {
@@ -16,14 +18,98 @@ html {
 }
 
 body {
-  font-family: wremena;
-  background-color: #f8f8f8;
+  font-family: 'Merriweather', serif;
+  background-color: #1C1313;
   letter-spacing: .01em;
   line-height: 1.5em;
   margin: 0;
-  color: black;
+  color: #CEA89E;
   padding: 0;
   /* cursor: none; */
+}
+
+h1{
+  font-size: 2.5em;
+  font-weight: lighter;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 8px;
+  letter-spacing: .03em;
+  text-align: center;
+  line-height: 1.14;
+}
+
+h2 {
+  font-size: 2em;
+  font-weight: lighter;
+  /*position: absolute;
+  top: 0;
+  left: 0;*/
+  margin: 8px;
+  letter-spacing: .03em;
+  text-align: center;
+  line-height: 1.14;
+}
+
+h3 {
+  font-size: 1.5em;
+  font-weight: lighter;
+  /*position: absolute;
+  top: 0;
+  left: 0;*/
+  margin: 8px;
+  letter-spacing: .03em;
+  text-align: center;
+  line-height: 1.14;
+}
+
+p.text span.italic {
+  margin: 8px;
+  font-style: italic;
+  font-size: .6em;
+  letter-spacing: .03em;
+  text-align: center;
+}
+
+p.text span.link {
+  font-weight: lighter;
+  margin: 8px;
+  color: #F99B73;
+  font-size: .7em;
+  letter-spacing: .03em;
+  text-align: center;
+}
+
+p.text span.center {
+  font-weight: lighter;
+  text-align: center;
+}
+
+p.text {
+  /*font-size: .8675em;*/
+  line-height: 1em;
+  font-size: .7em;
+  padding: 10px !important;
+  text-align: left;
+}
+
+p.text span {
+  font-weight: lighter;
+  display: block;
+  margin: 8px;
+  font-size: .7em;
+  letter-spacing: .03em;
+  text-align: left;
+}
+
+hr{
+  border:1px solid #CEA89E;
+}
+
+img{
+  width: 25%;
+  height: auto;
 }
 
 span#mouse {
@@ -31,7 +117,8 @@ span#mouse {
   position: fixed;
 }
 
-span#mouse:after {
+/*add mouse photo*/
+/*span#mouse:after {
   background-image: url('mouse.png');
   background-size: 50px 90px;
   background-repeat: no-repeat;
@@ -39,15 +126,15 @@ span#mouse:after {
   width: 50px;
   height: 90px;
   content: " ";
-}
+}*/
 
 div.handcoding-is-fun {
   height: 100vh;
   width: 100%;
   overflow: hidden;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  /*align-items: center;
+  justify-content: center;*/
 }
 
 .left::-webkit-scrollbar,
@@ -58,14 +145,30 @@ div.handcoding-is-fun {
 .left,
 .right {
   height: 100vh;
-  width: 50%;
+  width: 25%;
   overflow-y: scroll;
   overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
 }
 
-.left { z-index: 10; }
-.right { z-index: 8; }
+.middle{
+  width: 50%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.left { 
+  z-index: 10; 
+  align-items: left;
+  justify-content: left;
+  padding: 50px;
+}
+.right { 
+  z-index: 10; 
+  align-items: left;
+  align-content: left;
+  padding: 50px;
+}
 
 .slide {
   height: 80%;
@@ -76,18 +179,23 @@ div.handcoding-is-fun {
   margin-bottom: 50vh;
 }
 
-.left .slide { justify-content: flex-end; }
-.right .slide { justify-content: flex-start; }
+.left .slide { 
+  justify-content: flex-end; 
+}
+.right .slide { 
+  justify-content: flex-start;
+}
+
 .slide p { margin: 0; font-size: 3em;}
 .slide p.lg { font-size: 1.35em;}
 .slide p.lg em { font-size: 1.8675em; }
 .left .slide p { padding-right: 65px; }
 .right .slide p { padding-left: 65px;}
 .slide img {
-  width: 80%;
+  width: 50%;
   @media screen and (min-width: 768px) {
-    max-width: 85%;
-    max-height: 85%;
+    max-width: 55%;
+    max-height: 55%;
   }
 }
 
@@ -107,31 +215,6 @@ div.handcoding-is-fun {
   }
 }
 
-h3 {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-p.text {
-  font-size: .8675em;
-  line-height: 1em;
-  padding: 10px !important;
-
-}
-
-p.text span {
-  display: block;
-  margin-bottom: 4px;
-  font-size: .675em;
-}
-p.text span.scroll {
-  margin: 8px;
-  font-style: italic;
-  font-size: .525em;
-  letter-spacing: .03em;
-}
-
 @media screen and (min-width: 768px) {
   p.text {
     font-size: 1.325em;
@@ -143,6 +226,7 @@ p.text span.scroll {
 
   .slide img {
     width: auto;
+    height: 50%;
     max-width: 85%;
     max-height: 85%;
   }
