--- a/Changing_Perspectives/styles.css
+++ b/Changing_Perspectives/styles.css
@@ -42,6 +42,7 @@
       flex-direction: row;
       align-items: center;
       justify-content: center;
+      flex-wrap: wrap;
   }
 
   .carousel-item.active {
