--- a/Changing_Perspectives/styles.css
+++ b/Changing_Perspectives/styles.css
@@ -110,8 +110,8 @@
     right: 0;
     bottom: 0;*/
     padding: 1rem;
-    padding-top: 3rem;
-    background: #000;
+    /*padding-top: 3rem;*/
+    background: gainsboro;
     color: #fff;
     overflow-y: auto;
   }
@@ -120,7 +120,7 @@
     color: #fff;
   }
   summary:focus {
-    box-shadow: 0 0 0 0.25rem #aade87;
+    box-shadow: 0 0 0 0.25rem #000;
     outline: transparent;
   }
   
