--- a/Changing_Perspectives/styles.css
+++ b/Changing_Perspectives/styles.css
@@ -39,7 +39,7 @@
 
   .title_page_container {
     text-align: center;
-    margin-top: 50px;
+    
   }
   
   
@@ -64,8 +64,9 @@
   }
 
   .carousel-inner{
-    padding: 10%;
-    padding-top: -25px;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-bottom: 10%;
   }
 
   .heading {
@@ -74,9 +75,9 @@
     justify-content: center; 
     align-items: center; 
     text-align: center; 
-    margin-top: 20px; 
     position: relative; 
     z-index: 10; 
+    margin-top: 50px;
     }
 
   .carousel-item{
